# orbit

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.git.codex-sandbox-backup-20260409174558/: COMMIT_EDITMSG  config  index
.github/workflows/: compose-regression.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260410_01_m61_initial_persistence_baseline.py  20260411_01_m11_deliberation_entries.py  20260412_01_m122_query_hardening.py  20260413_01_m15_decision_validation.py
apps/api/orbit_api/: __init__.py  config.py  debates.py  deliberations.py  health.py  history.py  main.py  migrations.py  persistence.py  portfolios.py  resyntheses.py  review_runs.py  review_workflow.py  validation.py  workspace.py
apps/web/: Dockerfile  Dockerfile.e2e  README.md  package.json  playwright.config.ts  tailwind.config.ts
apps/worker/: Dockerfile  Dockerfile.python  README.md  pyproject.toml
apps/worker/orbit_worker/: __init__.py  cli.py  committee_engine.py  config.py  conflicts.py  debate.py  decision_validation.py  deliberation.py  domain.py  ingestion.py  llm_provider.py  llm_specs.py  persistence.py  reporting.py  resynthesis.py  reviewer.py  runner.py  schemas.py  scorecard.py  service.py
apps/worker/tests/: test_debate_service.py  test_decision_validation_service.py  test_deliberation_service.py  test_history_service.py  test_llm_review_workflow.py  test_persistence_hardening.py  test_persistence_models.py  test_portfolio_ingestion_service.py  test_resynthesis_service.py  test_review_run_service.py  test_review_workflow_service.py  test_thin_slice_parity.py  test_workspace_service.py
archive/js-baseline/: README.md
docs/milestone-0/: README.md  agent-architecture.md  brd.md  conflict-detection.md  prd.md  (+7 more)
docs/milestone-0.5/: README.md  review-pack.md
docs/milestone-0.5a/: README.md  migration-notes.md  review-pack.md
tests/: README.md
(+115 files in other folders)
