[tool.poetry]
name = "orbit-workspace"
version = "0.1.0"
description = "ORBIT workspace meta package"
authors = ["Somasundaram P combinesoma@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
