[tool.poetry]
name = "orbit-worker-thin-slice"
version = "0.1.0"
description = "ORBIT Milestone 0.5a Python thin-slice worker runtime"
authors = ["Somasundaram P <combinesoma@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
